@@ -1,5 +1,11 @@
 2002-09-17  Keisuke Nishida  <knishida@netlab.jp>
 
+	* cobc.c (probe_source_format): Removed.
+	(preprocess): Don't set source format.
+	(process_command_line): Set cobpp flags here.
+
+2002-09-17  Keisuke Nishida  <knishida@netlab.jp>
+
 	* tree.h (COBC_CALL_BY_LENGTH): New macro.
 	* reserved.c (reserved_words): Add LENGTH.
 	* parser.y (call_mode): Add CONTENT LENGTH.
